<resources>
    <string name="app_name">Covid Tracker</string>
    <string name="app_title">VTL Tracker</string>
    <string name="dashboard_primary_cases_label">cases</string>
    <string name="dashboard_primary_deaths_label">deaths</string>
    <string name="dashboard_primary_igr_label">infection growth rate</string>
    <string name="dashboard_vtl_igr_label">IGR</string>
    <string name="dashboard_primary_vtl_title">Vaccinated Travel Lane</string>
    <string name="igr_disclaimer_title">Weekly Infection Growth Rate</string>
    <string name="igr_disclaimer_message">This is the ratio between the number of cases in one week and the number in the previous week. It\'s a useful indicator to assess the trajectory of a country/region\'s Covid situation</string>
    <string name="detail_history_title">Past 2 weeks</string>
    <string name="detail_history_cases_label">Cases</string>
    <string name="detail_history_cases_disclaimer">Reported numbers on weekends are lower in some countries</string>
    <string name="detail_history_deaths_label">Deaths</string>
    <string name="detail_history_igr_label">Weekly infection growth rate</string>
    <string name="detail_history_cumulative_cases_label">total cases</string>
    <string name="detail_history_cumulative_deaths_label">total deaths</string>
    <string name="snackbar_retrieving_data">Retrieving latest data…</string>

    <string name="country_detail_not_available">Unable to retrieve country data</string>
    <string name="network_failed">Unable to retrieve latest data.</string>
    <string name="network_failed_message">Encountered network issues. Please try again.</string>
    <string name="try_again">Try again</string>
    <string name="generic_error_message">Something went wrong, please try again later.</string>
</resources>